--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <title>{{ page.title }}</title>
 
-   <meta name="author" content="Marin Vila" />
-   <link rel="stylesheet" href="/css/st.css" type="text/css" />
+    <meta name="author" content="Marin Vila"/>
+    <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 <body>
-    <div class="title">
-      <a class="homeref" href="/">Marin Vila</a>
-    </div>
-    <div class="content">
-      {{ content }}
+<div class="title">
+    <a class="homeref" href="/">marin vila</a>
+    <a href="http://github.com/{{ site.author.github }}/">github</a>
+    <a href="http://twitter.com/{{ site.author.twitter }}/">twitter</a>
+</div>
+<div class="content">
+    {{ content }}
     <div class="footer">
     </div>
-  </div>
+</div>
+
 </body>
 </html>
 
