--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 <div class="title">
-    <a class="homeref" href="/">marin vila</a>
-    <a href="http://github.com/{{ site.author.github }}/">github</a>
-    <a href="http://twitter.com/{{ site.author.twitter }}/">twitter</a>
+    <table>
+    <th><a class="homeref" href="/">marin vila</a></th>
+    <th><a class="titlelink" href="http://github.com/about.html">
+        <div><span>about</span></div>
+    </a></th>
+    <th><a class="titlelink" href="http://github.com/{{ site.author.github }}/"><div><span>github</span></div>
+    </a></th>
+    <th><a class="titlelink" href="http://twitter.com/{{ site.author.twitter }}/"><div><span>twitter</span></div></a></th>
+    </table>
 </div>
 <div class="content">
     {{ content }}
