--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>{{ page.title }}</title>
+---
+        layout: shell
+---
 
-    <meta name="author" content="Marin Vila"/>
-    <link rel="stylesheet" href="/css/style.css" type="text/css"/>
-</head>
-<body>
+
 <div class="title">
     <table>
-    <th><a class="homeref" href="/">marin vila</a></th>
-    <th><a class="titlelink" href="http://github.com/about.html">
-        <div><span>about</span></div>
-    </a></th>
-    <th><a class="titlelink" href="http://github.com/{{ site.author.github }}/"><div><span>github</span></div>
-    </a></th>
-    <th><a class="titlelink" href="http://twitter.com/{{ site.author.twitter }}/"><div><span>twitter</span></div></a></th>
+        <th><a class="homeref" href="/">marin vila</a></th>
+        <th><a class="titlelink" href="about.html">
+            <div><span>about</span></div>
+        </a></th>
+        <th><a class="titlelink" href="http://github.com/{{ site.author.github }}/"><div><span>github</span></div>
+        </a></th>
+        <th><a class="titlelink" href="http://twitter.com/{{ site.author.twitter }}/"><div><span>twitter</span></div></a></th>
     </table>
 </div>
 <div class="content">
@@ -24,7 +19,4 @@
     <div class="footer">
     </div>
 </div>
-
-</body>
-</html>
 
