Added Bootstrap, I wanted cube, because the whole internet looks the same now. But time is precious and bootstrap has a CDN. Also empty an file there just to get some positive mojo going.

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
 
     <meta name="author" content="Marin Vila"/>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 <body>
