--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="row">
     <div id="post" class="col-md-6 col-md-offset-3">
         <h3>{{page.title}}</h3>
         {{ content }}
