--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/about.html">personal</a></li>
+                <li><a href="/life.html">personal</a></li>
                 <li><a href="/cv.html">professional</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
