--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/life.html">personal</a></li>
                 <li><a href="/cv.html">professional</a></li>
+                <li><a href="/links.html">links</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://github.com/{{ site.author.github }}/">github</a></li>
