--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 <body>
-    {{content}}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script>
+{{content}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,6 +20,19 @@
   ga('create', 'UA-66960621-1', 'auto');
   ga('send', 'pageview');
 
+
 </script>
+<script type="text/javascript">
+    window.cookieconsent_options = {
+    "message":"This website uses cookies to ensure you get the best experience on our website",
+    "dismiss":"Ok!",
+    "theme":"dark-floating"
+    };
+</script>
+
+<script type="text/javascript"
+        src="/js/cookieconsent.min.js"></script>
+<!-- End Cookie Consent plugin -->
+
 </body>
 </html>
