--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -30,9 +30,7 @@
     };
 </script>
 
-<script type="text/javascript"
-        src="/js/cookieconsent.min.js"></script>
-<!-- End Cookie Consent plugin -->
+<script type="text/javascript" src="/js/cookieconsent.min.js"></script>
 
 </body>
 </html>
