Put The Cookie Down!

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/dark-bottom.css" type="text/css"/>
+
+    <script type="text/javascript" src="/js/cookieconsent.min.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>{{ page.title }}</title>
     <meta name="author" content="Marin Vila"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css"/>
+
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 <body>
@@ -22,15 +26,8 @@
 
 
 </script>
-<script type="text/javascript">
-    window.cookieconsent_options = {
-    "message":"This website uses cookies to ensure you get the best experience on our website",
-    "dismiss":"Ok!",
-    "theme":"dark-floating"
-    };
-</script>
 
-<script type="text/javascript" src="/js/cookieconsent.min.js"></script>
+
 
 </body>
 </html>
