--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,13 @@ body { padding-top: 70px; }
 }
 
 a {
-  color: grey;
+  color: #gray;
+}
+
+a:hover {
+  background-color: #f7f7f7;
+  color: black;
+  text-decoration: none;
 }
 
 .excerpt {
@@ -54,11 +60,6 @@ a {
   text-size:87%;
 }
 
-a:hover {
-  color: black;
-  text-decoration: none;
-}
-
 #post {
   font-family: Georgia, serif;
 }
@@ -92,6 +93,17 @@ a:hover {
   left: 50%;
   margin-top: -50px;
   margin-left: -100px;
+}
+
+.posttitle {
+  color: #444444;
+  margin: 2em 0em 0em 0em;
+  padding: 3px 3px 3px 3px;
+  box-shadow: 1px 1px 2px #888888;
+}
+
+.posttitle:hover {
+  background-color: #f7f7f7;
 }
 
 .highlight  { background: #ffffff; }
