--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
                 <li><a href="/links.html">links</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="http://stackoverflow.com/users/2208247/rin-malavi">STO</a></li>
                 <li><a href="http://github.com/{{ site.author.github }}/">github</a></li>
                 <li><a class="titlelink" href="http://twitter.com/{{ site.author.twitter }}/">twitter</a></li>
             </ul>
